<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:padding="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image1"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp">

        <RelativeLayout
            android:id="@+id/artikel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_margin="10dp"
                android:layout_width="340dp"
                android:layout_height="150dp"
                android:clickable="true"
                android:onClick="Artikel">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/article"
                        android:padding="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/artikel"
                        android:textStyle="bold"
                        android:fontFamily="@font/apple_garamond"
                        android:textSize="16dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorDark"
                        android:layout_margin="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/artikel"
                        android:textColor="@android:color/darker_gray"
                        android:padding="5dp"
                        android:fontFamily="@font/cinzel_decorative_regular" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/menu_anak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/artikel"
            android:layout_marginTop="50dp"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="340dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:onClick="MenuAnak">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:padding="10dp"
                        android:src="@drawable/family"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/apple_garamond"
                        android:text="@string/menu_anak"
                        android:textStyle="bold"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/colorDark"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:fontFamily="@font/cinzel_decorative_regular"
                        android:text="@string/anak"
                        android:textColor="@android:color/darker_gray"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>